Fixed overlap issue between HeroTransition.js and Projects.js

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,4 +1,5 @@
 .footerContainer {
+    position: relative;
     display: flex;
     height: 100vh;
     flex-direction: column;
