--- a/src/components/Projects.module.css
+++ b/src/components/Projects.module.css
@@ -2,7 +2,6 @@
     height: 200vh;
     position: relative;
     padding: 5rem 1rem;
-    overflow: visible;
 }
 
 .stickyWrapper {
